--- a/TestClients/MtApi5TestClient/MtApi5TestClient.csproj
+++ b/TestClients/MtApi5TestClient/MtApi5TestClient.csproj
@@ -75,7 +75,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
