--- a/MirrorTrader/packages.config
+++ b/MirrorTrader/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net472" />
+  <package id="QuickFIXn.Core" version="1.10.0" targetFramework="net472" />
+  <package id="QuickFIXn.FIX4.4" version="1.10.0" targetFramework="net472" />
 </packages>
